@@ -101,7 +101,7 @@ else {
     exit();
   }
 	  
-	setLog($connection2, $_SESSION[$guid]["gibbonSchoolYearID"], $gibbonModuleID, $_SESSION[$guid]["gibbonPersonID"], "Technician Group Removed", array("groupID"=>$groupID, "newGroupID"=>$newGroupID));
+	setLog($connection2, $_SESSION[$guid]["gibbonSchoolYearID"], $gibbonModuleID, $_SESSION[$guid]["gibbonPersonID"], "Technician Group Removed", array("newGroupID"=>$newGroupID));
 
   //Success 0
   $URL=$URL . "&addReturn=success0" ;
