@@ -124,7 +124,7 @@ $actionRows[$actionCount]["categoryPermissionOther"]="Y" ;
 $actionCount++ ;
 $actionRows[$actionCount]["name"]="Help Desk Settings" ;
 $actionRows[$actionCount]["precedence"]="0" ;
-$actionRows[$actionCount]["category"]="Settings" ;
+$actionRows[$actionCount]["category"]="Admin" ;
 $actionRows[$actionCount]["description"]="Allows the user to edit the settings for the module." ;
 $actionRows[$actionCount]["URLList"]="helpDesk_settings.php" ;
 $actionRows[$actionCount]["entryURL"]="helpDesk_settings.php" ;
@@ -141,7 +141,7 @@ $actionRows[$actionCount]["categoryPermissionOther"]="Y" ;
 $actionCount++ ;
 $actionRows[$actionCount]["name"]="Manage Technicians" ;
 $actionRows[$actionCount]["precedence"]="0" ;
-$actionRows[$actionCount]["category"]="Settings" ;
+$actionRows[$actionCount]["category"]="Technician" ;
 $actionRows[$actionCount]["description"]="Allows the user to manage the Technicians." ;
 $actionRows[$actionCount]["URLList"]="helpDesk_manageTechnicians.php" ;
 $actionRows[$actionCount]["entryURL"]="helpDesk_manageTechnicians.php" ;
@@ -158,7 +158,7 @@ $actionRows[$actionCount]["categoryPermissionOther"]="Y" ;
 $actionCount++ ;
 $actionRows[$actionCount]["name"]="Manage Technician Groups" ;
 $actionRows[$actionCount]["precedence"]="0" ;
-$actionRows[$actionCount]["category"]="Settings" ;
+$actionRows[$actionCount]["category"]="Technician" ;
 $actionRows[$actionCount]["description"]="Allows the user to manage the Technicians Groups." ;
 $actionRows[$actionCount]["URLList"]="helpDesk_manageTechnicianGroup.php" ;
 $actionRows[$actionCount]["entryURL"]="helpDesk_manageTechnicianGroup.php" ;
